# devops-tools

./: .gitignore  Dockerfile  Makefile  app.ini  docker-compose.yml  pytest.ini  requirements.txt  setup.cfg  setup.py
config/: logging.yml
config/example/: example.json
config/fakes/: vault.json
config/templates/: hello_world.mustache
devops/: main.py
devops/common/: config.py
devops/reports/: history.py  report.py
devops/templates/: templates.py
devops/utils/: __init__.py  read_ini.py  read_setup.py
devopstoolsdaven/: container.py
devopstoolsdaven/common/: config.py  registry.py
devopstoolsdaven/reports/: fluentd_logger.py  fluentd_processor.py  history.py  history_processor.py  logger.py  logging_processor.py  processor.py  processors_builder.py  report.py
devopstoolsdaven/templates/: templates.py
devopstoolsdaven/utils/: read_ini.py  read_setup.py
devopstoolsdaven/vault/: vault.py  vault_fake.py  vault_little.py
fluentd/: Dockerfile  custom-fluent.conf
monitoring/prometheus/: prometheus.yml
test/: test_container.py
test/common/: register_hook.py  test_config.py
test/reports/: test_history.py  test_history_integration.py  test_history_processors.py  test_logging_proccesor.py  test_processors_builder.py  test_reports.py
test/templates/: test_templates.py
test/vault/: test_vault_fake.py
