[bdist_wheel]
;universal = 1
[metadata]
long_description = file: README.MD
Description-Content-Type = text/markdown; charset=UTF-8;
license_files = LICENSE
python_requires = '>=3.6'
[options]
[build-system]
[flake8]
exclude = .git
max-complexity = 10
show-source = True
statistics = True
max-line-length = 160
[mypy]
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
strict_optional = True
strict_equality = True
show_error_context = True
pretty = True
show_traceback = True
scripts_are_modules = True
ignore_missing_imports = True
[tool.coverage.run]
branch = True